# book-recommender-system

./: .gitignore  README.md  data_exploration_and_preprocessing.ipynb
backend/: main.py  pyproject.toml  recommender.py  requirements.txt
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  types.ts
frontend/app/api/recommend/: route.ts
frontend/app/components/: BookCard.tsx  BookModal.tsx  SearchBar.tsx  SkeletonGrid.tsx
